# divine

./: .buildinfo  CHANGELOG.rst  GEMINI.md  README.rst  ROADMAP.md  about.html  changelog.html  contribute.html  discuss.html  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  todos.html
.clerk/: geometor-divine_docs.md  geometor-divine_tree.txt  tree.txt
.clerk.bak/: instructions.md  src.md
.clerk.bak/docs/: docs.md  index.html
.doctrees/: about.doctree  changelog.doctree  contribute.doctree  discuss.doctree  environment.pickle  glossary.doctree  index.doctree  todos.doctree
.doctrees/demos/: index.doctree  vesica.doctree
_modules/: divine.html  index.html
_sources/: index.rst.txt
about/: index.html
changelog/: index.html
contribute/: index.html
demos/: index.html  root3b.py  vesica.html  vesica4.html  vesica4.py
discuss/: index.html
docs/: .buildinfo  changelog.html  contribute.html  genindex.html  glossary.html  objects.inv  py-modindex.html  searchindex.js  todos.html
docsrc/: conf.py  index.rst  intro.rst
genindex/: index.html
glossary/: index.html
intro/: index.html
log/: 22.356-152519.html  atom.xml  index.html
logs/: index.html
mission/: index.html  statement.html
modules/: geometor.divine.golden.html  geometor.divine.html  index.html
overview/: index.html  intro.html
py-modindex/: index.html
refs/: index.html
search/: index.html
todos/: index.html
types/: log.html
usage/: getting_started.html  index.html  installation.html
(+151 files in other folders)
