[project]
name = "geometor-divine"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sympy",
    "matplotlib",
    "mplcursors",
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
divine = "geometor.divine.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geometor"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "geometor.divine.__version__"}

[project.urls]
"Website" = "https://geometor.github.io/divine"
"Repository" = "https://github.com/geometor/divine"
"Issues" = "https://github.com/geometor/divine/issues"
